essential style alignment fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -521,8 +521,8 @@ h6 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: 5.5rem;
-  margin-right: 5.5rem;
+  margin-left: 9rem;
+  margin-right: 4rem;
 
   .resource-left,
   .resource-right {
@@ -4275,6 +4275,8 @@ footer {
   }
 
   .Resources {
+    margin: 1rem;
+
     table {
       align-self: center;
       border-collapse: separate;
